[gd_scene load_steps=15 format=2]

[ext_resource path="res://TextureForMainMenu/MainMenu.glb" type="PackedScene" id=1]
[ext_resource path="res://MainMenu3D.gd" type="Script" id=2]
[ext_resource path="res://TextureForMainMenu/shades-red-greensleeves.jpg" type="Texture" id=3]
[ext_resource path="res://masque/MASQUE__.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://TextureForMainMenu/131ef33738e919843d824db796eb17e6.png" type="Texture" id=5]
[ext_resource path="res://masque/Cyberfunk.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=6]
size = 50
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
size = 50
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
size = 80
font_data = ExtResource( 6 )

[sub_resource type="Environment" id=1]
background_energy = 5.09
ambient_light_color = Color( 1, 1, 1, 1 )
ambient_light_energy = 0.31
fog_enabled = true
fog_color = Color( 0, 0, 0, 1 )
fog_depth_begin = 0.0
fog_depth_end = 52.1
fog_depth_curve = 0.138696
fog_transmit_curve = 1e-05
tonemap_exposure = 0.56
ss_reflections_enabled = true
ss_reflections_fade_in = 1.42705
ss_reflections_fade_out = 1.62451
ssao_enabled = true
ssao_radius = 0.67
ssao_intensity = 0.78
ssao_quality = 2
ssao_edge_sharpness = 9.33
dof_blur_far_enabled = true
dof_blur_far_distance = 364.68
dof_blur_far_transition = 19.63
dof_blur_far_quality = 2
adjustment_enabled = true

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="CubeMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 1, 0, 0, 1 )
albedo_texture = ExtResource( 3 )
metallic_specular = 0.0

[sub_resource type="CapsuleMesh" id=5]

[node name="Spatial" type="Spatial"]
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -509.936
margin_top = 3.05176e-05
margin_right = 517.064
margin_bottom = 98.0
custom_fonts/font = SubResource( 6 )
text = "Indefinite Laboratory"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Control"]
margin_left = 200.255
margin_top = 567.286
margin_right = 412.255
margin_bottom = 651.286
custom_fonts/font = SubResource( 7 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -122.5
margin_top = -304.0
margin_right = 122.5
margin_bottom = -93.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -306.0
margin_top = -95.0
margin_right = 306.0
custom_fonts/font = SubResource( 8 )
text = "Project Cyberduck "
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" parent="." instance=ExtResource( 1 )]

[node name="Camera" type="Camera" parent="."]
transform = Transform( -4.25718e-08, -0.226855, -0.973929, -9.91616e-09, 0.973929, -0.226855, 1, 1.06581e-14, -4.37114e-08, -27.7314, 0, -7.88458 )
environment = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( -4.37114e-08, 0.301731, 0, -7.67584, -1.01237e-07, 0, 0, 0, 12.4987, 29.6094, 3.50366, -7.31365 )
material_override = SubResource( 2 )
mesh = SubResource( 3 )
material/0 = null

[node name="RoomLightUpEffect" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 4.62103, -7.1599 )
light_energy = 16.0
light_indirect_energy = 9.95
light_bake_mode = 2
spot_range = 4096.0
spot_attenuation = 0.000850149
spot_angle = 95.6
spot_angle_attenuation = 0.37893

[node name="LightBulbLightEffect" type="Spatial" parent="."]

[node name="SpotLight2" type="SpotLight" parent="LightBulbLightEffect"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.69999, -7.12836 )
light_energy = 16.0
spot_range = 3.46373
spot_angle = 24.0065

[node name="SpotLight3" type="SpotLight" parent="LightBulbLightEffect"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.69999, -7.12836 )
light_energy = 16.0
spot_range = 3.46373
spot_angle = 24.0065

[node name="SpotLight4" type="SpotLight" parent="LightBulbLightEffect"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.69999, -7.12836 )
light_energy = 16.0
spot_range = 3.46373
spot_angle = 24.0065

[node name="SpotLight5" type="SpotLight" parent="LightBulbLightEffect"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.69999, -7.12836 )
light_energy = 16.0
spot_range = 3.46373
spot_angle = 24.0065

[node name="SpotLight6" type="SpotLight" parent="LightBulbLightEffect"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.69999, -7.12836 )
light_energy = 16.0
spot_range = 3.46373
spot_angle = 24.0065

[node name="SpotLight7" type="SpotLight" parent="LightBulbLightEffect"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.69999, -7.12836 )
light_energy = 16.0
spot_range = 3.46373
spot_angle = 24.0065

[node name="SpotLight8" type="SpotLight" parent="LightBulbLightEffect"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.69999, -7.12836 )
light_energy = 16.0
spot_range = 3.46373
spot_angle = 24.0065

[node name="SpotLight9" type="SpotLight" parent="LightBulbLightEffect"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.69999, -7.12836 )
light_energy = 16.0
spot_range = 3.46373
spot_angle = 24.0065

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( -2.26835e-08, 0, -0.346813, 0, 0.587025, 0, 0.518939, 0, -1.51597e-08, 18.921, 1.13075, -7.80435 )
material_override = SubResource( 4 )
mesh = SubResource( 5 )
material/0 = null

[node name="MeshInstance3" type="MeshInstance" parent="."]
transform = Transform( -2.26835e-08, 0, -0.346813, 0, 0.587025, 0, 0.518939, 0, -1.51597e-08, 18.921, 1.13075, -6.23848 )
material_override = SubResource( 4 )
mesh = SubResource( 5 )
material/0 = null

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
